servo/tests/compiletest/plugin/compile-fail/str_to_string.rs
#
!
[
feature
(
plugin
)
]
#
!
[
plugin
(
plugins
)
]
fn
main
(
)
{
let
x
=
"
foo
"
.
to_string
(
)
;
let
x
=
&
x
[
.
.
]
;
x
.
to_string
(
)
;
}
